tests/ucc/bind/good/fun-proto.c
void fu(void);

void fu(void)
{

}

int main(void)
{
    return fu();
}
