tests/ucc/bind/bad/enum-redef.c
enum a
{
c,
};

enum a
{
c,
};

int main(void)
{
    return 0;
}
